refactor all the things!

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
     <div class="content mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">ANGULAR 2 with NGRX</span>
+          <span class="mdl-layout-title">Angular 2 REST Website</span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
           <!-- Navigation. We hide it in small screens. -->
@@ -38,11 +38,6 @@
       </main>
     </div>
 
-    <!-- Common files to be cached -->
-    <script src="/__build__/common.js"></script>
-    <!-- Vendor files -->
-    <script src="/__build__/vendor.js"></script>
-    <!-- App script -->
-    <script src="/__build__/app.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
