--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
         </div>
       </header>
       <main class="mdl-layout__content page-content">
-        <my-app class="mdl-grid">
+        <my-app>
           <div class="mdl-spinner mdl-js-spinner is-active"></div>
         </my-app>
       </main>
