--- a/client/src/app.html
+++ b/client/src/app.html
@@ -4,7 +4,7 @@
       <span class="mdl-layout-title">Angular 2 REST Website</span>
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" [routerLink]="['Items']">Items</a>
+        <a class="mdl-navigation__link" [routerLink]="links.items">Items</a>
       </nav>
     </div>
   </header>
