--- a/client/src/app.html
+++ b/client/src/app.html
@@ -5,7 +5,10 @@
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" [routerLink]="links.items">Items</a>
+        <a class="mdl-navigation__link" [routerLink]="links.demo">Demo</a>
+        <a class="mdl-navigation__link" [routerLink]="links.widgets">Widgets</a>
       </nav>
+      <button (click)="goToDemo()">demo</button>
     </div>
   </header>
   <main class="mdl-layout__content page-content">
