--- a/client/src/app.html
+++ b/client/src/app.html
@@ -9,6 +9,11 @@
       </nav>
     </div>
   </header>
+  <div class="posts">
+    <ul>
+      <li *ngFor="#post of posts">{{post.title}} {{post.author}}</li>
+    </ul>
+  </div>
   <main class="mdl-layout__content page-content">
     <router-outlet></router-outlet>
   </main>
